# BA_space_debris

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  dummy_debris_test_input.txt  runtime.cmd  script_profiling.cmd
.github/workflows/: run-tests-on-push.yml
Plotting/: exportDeltaTPlots.py  exportPlots.py  plotCSVSateliteData.py  plotDeltaTResults.py
Thesis/: CMakeLists.txt  Math.tex  OB_space_debris_trajectory_modelling.tex  literature.bib  settings.tex
Thesis/data/input/: delta_t.txt  delta_t_short.txt  orbit_comparison.txt  runtime.txt
cmake/: doxygen.cmake
lib/googletest/docs/: advanced.md
src/: CMakeLists.txt  SetupDummy.cpp  SetupDummy.h  debris_sim.cpp  debris_sim.h  main.cpp
src/debris/: AccelerationUpdate.h  Debris.cpp  Debris.h  DebrisContainer.cpp  DebrisContainer.h  include.h
src/io/: CommandLineInput.cpp  CommandLineInput.h  FileInput.cpp  FileInput.h  FileOutput.cpp  FileOutput.h  IOUtils.h  Input.cpp  Input.h  Output.cpp  Output.h  include.h
src/physics/: Accelaration.cpp  Accelaration.h  Acceleration.cpp  Acceleration.h  AccelerationAccumulator.cpp  AccelerationAccumulator.h  Constants.h  Forces.cpp  Forces.h  Integrator.cpp  Integrator.h  include.h
src/physics/AccelerationComponents/: C22Component.cpp  C22Component.h  C22S22Component.cpp  C22S22Component.h  DragComponent.cpp  DragComponent.h  J2Component.cpp  J2Component.h  KepComponent.cpp  KepComponent.h  LunComponent.cpp  LunComponent.h  S22Component.cpp  S22Component.h  SRPComponent.cpp  SRPComponent.h  SolComponent.cpp  SolComponent.h
src/satellitePropagator/debris/: AccelerationUpdate.h  Debris.cpp  Debris.h  DebrisContainer.cpp  DebrisContainer.h
src/satellitePropagator/io/: CommandLineInput.cpp  CommandLineInput.h  FileInput.h  FileOutput.cpp  FileOutput.h  IOUtils.h
src/satellitePropagator/physics/: AccelerationAccumulator.h  Constants.h  Integrator.h  include.h
src/satellitePropagator/physics/AccelerationComponents/: AccelerationComponents.h  C22Component.cpp  C22Component.h  C22S22Component.h  DragComponent.cpp  DragComponent.h  J2Component.cpp  J2Component.h  KepComponent.h  LunComponent.cpp  LunComponent.h  S22Component.cpp  S22Component.h  SRPComponent.cpp  SRPComponent.h  SolComponent.cpp  SolComponent.h  include.h
src/satellitePropagator/utils/: MathUtils.h
src/utils/: MathUtils.h
test/: CMakeLists.txt  SetupDummy_test.cpp  main.cpp
test/debris_test/: DebrisContainer_test.cpp  DebrisContainer_test.h  Debris_test.cpp  Debris_test.h
test/io_test/: CommandLineInput_test.cpp  CommandLineInput_test.h  FileInput_test.cpp  FileOutput_test.cpp  FileOutput_test.h  Input_test.cpp  Input_test.h  Output_test.cpp
test/physics_test/: Acceleration_test.cpp  Acceleration_test.h  Forces_test.cpp  Forces_test.h  Integrator_test.cpp  Integrator_test.h
test/physics_test/Acceleration_tests/: C22ComponentTests.cpp  C22ComponentTests.h  C22S22ComponentTests.cpp  C22S22ComponentTests.h  DragComponentTests.cpp  DragComponentTests.h  J2ComponentTests.cpp  J2ComponentTests.h  KepComponentTests.cpp  KepComponentTests.h  LunComponentTests.cpp  LunComponentTests.h  S22ComponentTests.cpp  S22ComponentTests.h  SRPComponentTests.cpp  SRPComponentTests.h  SolComponentTests.cpp  SolComponentTests.h
test_files/: test_input.txt
